[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["stneng <web@stneng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
num = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
threadpool = "1.8"