[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["stneng <web@stneng.com>"]
edition = "2018"

[dependencies]
image = "0.23"
indicatif = "0.15"
num = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
threadpool = "1.8"
ray-tracing-codegen = { path = "codegen" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ray_tracing_benchmark"
harness = false